rafactor: перейти на использование StringUtils, объединить обработчики ошибок в один